plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
	id "org.sonarqube" version "6.0.1.5171"
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}


dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	runtimeOnly 'io.github.cdimascio:java-dotenv:5.2.2'
	implementation 'io.github.cdimascio:java-dotenv:5.2.2'
	compileOnly 'io.github.cdimascio:java-dotenv:5.2.2'
	testImplementation 'io.github.cdimascio:java-dotenv:5.2.2'

	implementation 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3'
	testImplementation 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3'
	compileOnly 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3'
	runtimeOnly 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3'
}

tasks.named('test') {
	useJUnitPlatform()
}
